--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ cffi==1.12.2
 chardet==3.0.4
 Click==7.0
 decorator==4.3.2
-Django==1.11.8
+django>=1.11.19
 Flask==1.0.2
 Flask-Bcrypt==0.7.1
 Flask-Cors==3.0.7
@@ -31,11 +31,11 @@ ipython-genutils==0.2.0
 isort==4.3.15
 itsdangerous==1.1.0
 jedi==0.13.3
-Jinja2==2.10
+Jinja2>=2.10.1
 lazy-object-proxy==1.3.1
 Mako==1.0.8
 MarkupSafe==1.1.1
-marshmallow==2.9.1
+marshmallow>=2.15.1
 marshmallow-sqlalchemy==0.16.1
 mccabe==0.6.1
 oauthlib==3.0.1
@@ -63,7 +63,7 @@ SQLAlchemy-Utils==0.33.11
 toml==0.10.0
 traitlets==4.3.2
 typed-ast==1.3.1
-urllib3==1.24.1
+urllib3>=1.24.2
 URLObject==2.4.3
 virtualenv==16.4.3
 virtualenv-clone==0.5.2
