--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "5.7.1",
+    "node": "9.5.0"
+  },
   "dependencies": {
     "express": "^4.17.1",
     "jquery": "^3.5.1",
